--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,17 +125,8 @@ aside {
 }
 
 section {
-	min-height: 100%;
+	height: 100%;
 	margin-bottom: -80px;
-}
-
-section:after {
-	content: "";
-	display: block;
-}
-
-footer section:after {
-	height: 80px;
 }
 
 footer {
