--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,7 @@ body {
 
 header {
 	background: #ffffff;
-	width: 100%;
 	height: 80px;
-	top: 0;
-	right: 0;
-	left: 0;
 	border-bottom: 3px solid #cccccc;
 	margin-bottom: 40px;
 }
@@ -127,11 +123,8 @@ hr {
 	margin-bottom: 25px;	
 }
 
-.wrap {
+.wrapper {
 	width: 960px;
-}
-
-.centered {
 	margin: 0 auto;
 }
 
@@ -193,4 +186,11 @@ hr {
 	border: none;
 }
 
-
+@media (max-width: 960px) {
+	.wrapper {
+		width: 760px;
+		margin: 0 auto;}
+	aside {
+	margin-top: 40px;
+	float: left;}
+}
