--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,7 +8,9 @@ orange: #ff751a*/
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  /*font-family: 'Roboto', sans-serif;*/
+  font-family: 'Quicksand', sans-serif;
+  background: whitesmoke;
 }
 
 .bold {
@@ -146,7 +148,6 @@ i.skills-icon:hover {
 .tooltip {
     position: relative;
     display: inline-block;
-    cursor: pointer;
 }
 
 .tooltip .tooltiptext {
@@ -172,6 +173,25 @@ i.skills-icon:hover {
 .tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
+}
+
+/*PROJECTS PAGE*/
+
+h1.projects {
+  margin: 50px 0 20px;
+}
+
+div.projects {
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+div.project-item {
+  width: 300px;
+  height: 180px;
+  background: grey;
+  margin: 20px;
+  border-radius: 10px;
 }
 
 /*CONTACT PAGE*/
