--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -252,6 +252,7 @@ textarea.form-item {
   outline: none;
   border-bottom: 1px grey solid;
   background: transparent;
+  font-family: 'Quicksand', sans-serif;
 }
 
 input.form-item {
@@ -259,7 +260,6 @@ input.form-item {
 }
 
 textarea.form-item {
-  font-family: 'Roboto', sans-serif;
   padding: 0;
   width: 380px;
 }
@@ -273,6 +273,7 @@ input#submit {
   background: #33cccc;
   color: #f5f5f5;
   border-radius: 30px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 input#submit:hover {
