--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -204,6 +204,7 @@ h1.ongoing {
 div.projects {
   justify-content: center;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 div.project-item {
@@ -233,6 +234,13 @@ h1.project-title {
   font-weight: bold;
   max-width: 200px;
   vertical-align: middle;
+}
+
+p.project-description {
+  width: 280px;
+  text-align: center;
+  font-size: 15px;
+  line-height: 20px;
 }
 
 /*CONTACT PAGE*/
