contact input fields

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,6 +42,8 @@ body {
 nav.main-nav {
   background: #33cccc;
   height: 70px;
+/*  transform: translateY(70px);
+  transition: transform 300ms ease-in-out;*/
 }
 
 /*Logo*/
@@ -320,6 +322,15 @@ textarea.form-item {
   border-bottom: 1px grey solid;
   background: transparent;
   font-family: 'Quicksand', sans-serif;
+}
+
+input.form-item.selected,
+textarea.form-item.selected {
+  border-bottom: 1px #1f7a7a solid;
+}
+
+i.fa.selected {
+  color: #1f7a7a;
 }
 
 div.submit {
