--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -127,7 +127,9 @@ li.selected {
 /*Intro*/
 div.intro {
   color: grey;
-  width: 900px;
+  width: 915px;
+  padding: 0 15px;
+  position: relative;
 }
 
 .center {
@@ -142,6 +144,38 @@ p.intro {
 
 i.fa.intro {
   font-size: 18px;
+}
+
+div[class^='intro-border-'] {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+}
+
+div[class^='intro-border-left-'] {
+  top: 0;
+  left: 0;  
+}
+
+div[class^='intro-border-right-'] {
+  right: 0;
+  bottom: 0;  
+}
+
+div.intro-border-left-top {
+  border-top: 5px double lightgrey;
+}
+
+div.intro-border-left-side {
+  border-left: 5px double lightgrey;
+}
+
+div.intro-border-right-side {
+  border-right: 5px double lightgrey;
+}
+
+div.intro-border-right-bottom {
+  border-bottom: 5px double lightgrey;
 }
 
 /*Skills*/
