--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -267,7 +267,7 @@ div.projects {
 
 h1.projects {
   font-size: 23px;
-  margin: 20px 0 20px 35px;
+  margin: 20px 0 20px;
   text-align: left;
   color: grey;
 }
